Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14647

mapwrite a FLR file does not stale other mirrors

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      A flr mode fsx test case shows that mapwrite a FLR file does not invalidate other mirrors.

       

      lfs mirror resync /mnt/lustre/f: 0
      000137 1619532279.598545 mapwrite   0x0337c1 thru 0x03bb75	(0x083b5 bytes)
        lcm_flags:         ro
      

            bobijam Zhenyu Xu
            bobijam Zhenyu Xu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: